fix overflow issue

--- a/client/src/components/content/RobotContainer/RobotContainer.module.css
+++ b/client/src/components/content/RobotContainer/RobotContainer.module.css
@@ -21,4 +21,11 @@
 .title {
   color: var(--colorPrimaryInvertedText) !important;
   text-align: center;
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis;
+}
+
+.title:hover {
+  overflow: visible;
 }
